# Dodu

./: .gitignore  CHANGELOG.md  Dodu.cabal  cabal.project  flake.nix
.github/workflows/: kernel.yml  release.yml
app/: Interpreter.hs  JupyterServer.hs  Lambda.hs  Main.hs  Parser.hs  Pretty.hs
stdlib/: do.du
