cabal-version:      2.4
name:               Dodu
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maxime
maintainer:         emixampons@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Dodu
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Pretty
                    , Lambda
                    , Parser
                    , Interpreter
                    , JupyterServer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14
                    , aeson < 2.0
                    , ratio-int
                    , mwc-random
                    , mtl
                    , text
                    , parsec
                    , haskeline
                    , optparse-applicative
                    , containers
                    , data-fix
                    , recursion-schemes
                    , jupyter
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:     -Wall
                     -Wextra
